[package]
name = "pbpng"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
arboard = "3.3.1"
clap = { version = "4.5.1", features = ["derive"] }
image = { version = ">0.24", default-features = false, features = ["png"] }
